fix(slides): truncate subtitle of slides entry

--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -1116,6 +1116,10 @@
   }
 
   &-subtitle {
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     color: var(--color-secondary);
     font-size: 0.9375rem;
     margin: 0 0 $space-md 0;
